--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-responsive": "^6.1.2",
-    "react-scripts": "^3.0.0"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +25,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "css-loader": "^2.1.1",
-    "jest": "^24.7.1"
+    "css-loader": "^2.1.1"
   }
 }
